<resources>
    <string name="app_name">Hive</string>
    <string name="profile_picture_description">Profile Picture</string>
    <string name="sample_name">John Appleseed</string>
    <string name="sample_team">Product Management</string>
    <string name="email">Email</string>
    <string name="phone">Phone</string>
    <string name="sample_biography">This is a sample biography. This is a sample biography. This is a sample biography. This is a sample biography.</string>
    <string name="empty_list">No employees found</string>
    <string name="empty_title">Uh Oh! No employees found</string>
    <string name="employees">Employees</string>
    <string name="details">Details</string>
</resources>
